index: fix a vertical-align

--- a/index.styl
+++ b/index.styl
@@ -35,6 +35,7 @@ img
 
 .icon
     display inline-block
+    vertical-align top
     img
         display block
         height 1em
